added and updated cv

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
                         <div class="col-lg-6">
                             <div class="home-img d-none d-lg-block">
-                                <img class="phot" src="https://i.ibb.co/sd79qs9p/IMG-0346-removebg-preview.png" alt="Joshua Okorie">
+                                <img class="phot" src="https://i.ibb.co/N2M5T2BV/home-image.png" alt="Joshua Okorie">
                             </div>
                         </div>
                     </div>
@@ -195,7 +195,7 @@
                                             <i class="fa-solid fa-user"></i>
                                         </div>
                                         <div class="info-text">
-                                            <p><span>Website:</span> www.cryptical.com</p>
+                                            <p><span>Website:</span>https://hackwithjoshua.github.io/</p>
                                         </div>
                                     </div>
                                 </li>
@@ -212,7 +212,7 @@
                                 <div class="skills"></div>
                             </div>
 
-                            <h4>DevOps <span style="float: right;">85%</span></h4>
+                            <h4>DevOps / DevSecOps <span style="float: right;">85%</span></h4>
                             <div class="skillbar-container" data-percent="85%">
                                 <div class="skills"></div>
                             </div>
@@ -453,7 +453,7 @@
                         <h2 class="action-title">Have any project in mind?</h2>
                         <p>I'd love to hear about it! Whether it's a small idea or a grand vision, I'm ready to bring it to life. Reach out today and let's make your project a reality!</p>
                         <ul>
-                            <li><a href="Mr-Joshua-OkorieCV.pdf" download class="btn btn-1">Download CV</a></li>
+                            <li><a href="Joshua-Okorie-Professional-CV.pdf" download class="btn btn-1">Download CV</a></li>
                             <li><a href="#contact" class="btn btn-2">HIRE ME</a></li>
                         </ul>
                     </div>
