updated github url

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                 <div class="header-social-icon">
                                     <ul>
                                         <li><a href="https://x.com/Joshteamgifted" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-x-twitter"></i></a></li>
-                                        <li><a href="https://github.com/stephenjoshua18-web" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a></li>
+                                        <li><a href="https://github.com/hackwithjoshua" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a></li>
                                         <li><a href="https://www.linkedin.com/in/joshua-okorie" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a></li>
                                     </ul>
                                 </div>
