Revise personal details and enhance descriptions

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <div class="home-text ">
                                 <h4>HELLO, I'M</h4>
                                 <h1>JOSHUA OKORIE</h1>
-                                <p>An experienced DevOps, DevSecOps and Cloud Engineer</p>
+                                <p>An experienced DevOps, DevSecOps, and Cloud Engineer</p>
 
                                 <div class="home-btn">
                                     <a href="#portfolio" class="btn-1">View my Work</a>
@@ -131,7 +131,7 @@
                 <div class="col-lg-6">
                     <div class="about-content">
                         <h5 class="about-title">I'm <span>Joshua Okorie</span> and I'm a DevOps and Cloud Engineer</h5>
-                        <p class="details">I am a an all-round System Administrator, DevOps, DevSecOps and Cloud Engineer who specializes on the AWS cloud. I have extensive experience in building scalable and cloud-native web applications, whether it is AI/ML, Fin-tech, e-commerce, logistics, education, and lot more. I believe in deploying your projects either on the public cloud or the private cloud.</p>
+                        <p class="details">I am an all-round System Administrator, DevOps, DevSecOps, and Cloud Engineer who specializes in the AWS cloud. I have extensive experience in building scalable and AI, fintech, and cloud-native projects, whether it is AI/ML, Fin-tech, e-commerce, logistics, education, and much more. </p>
 
                             <ul>
                                 <li>
@@ -151,7 +151,7 @@
                                             <i class="fa-solid fa-envelope"></i>
                                         </div>
                                         <div class="info-text">
-                                            <p><span>Email:</span> joshuadevops@engineer.com</p>
+                                            <p><span>Email:</span> email@contactjoshua.live</p>
                                         </div>
                                     </div>
                                 </li>
@@ -195,7 +195,7 @@
                                             <i class="fa-solid fa-user"></i>
                                         </div>
                                         <div class="info-text">
-                                            <p><span>Website:</span>https://hackwithjoshua.github.io/</p>
+                                            <p><span>Website:</span>www.contactjoshua.live</p>
                                         </div>
                                     </div>
                                 </li>
@@ -779,7 +779,7 @@ Whether it’s a fleet of Linux servers on AWS or a hybrid setup across on-prem 
                             </div>
                             <div class="collapse " id="collapse-03" data-parent="#accordion">
                                 <div class="accordion-body">
-                                    <p>We design systems with high availability, security, and scalability at the core. Our approach includes:
+                                    <p>I design systems with high availability, security, and scalability at the core. Our approach includes:
 
 Cloud-native architecture using services like AWS Auto Scaling Groups, Load Balancers, Multi-AZ deployments, and Container Orchestration (Kubernetes) to ensure resilience and uptime.
 
@@ -798,7 +798,7 @@ Proactive monitoring and alerting using tools like Prometheus, Grafana, ELK stac
                             </div>
                             <div class="collapse " id="collapse-04" data-parent="#accordion">
                                 <div class="accordion-body">
-                                    <p>Yes, we provide full end-to-end DevOps solutions, from initial setup to ongoing automation and optimization. Our team builds robust CI/CD pipelines using tools like GitHub Actions, GitLab CI/CD, Jenkins, ArgoCD, and CircleCI, tailored to the project’s needs.
+                                    <p>Yes, I provide full end-to-end DevOps solutions, from initial setup to ongoing automation and optimization. Our team builds robust CI/CD pipelines using tools like GitHub Actions, GitLab CI/CD, Jenkins, ArgoCD, and CircleCI, tailored to the project’s needs.
 
 We automate everything from code integration, testing, containerization (Docker), infrastructure provisioning (Terraform), to secure deployments on cloud platforms like AWS, Azure, and GCP.
 
@@ -836,8 +836,8 @@ Whether it's a monolith, microservices, or event-driven architecture, our pipeli
 
                         <div class="contact-info-item">
                             <i class="fa-solid fa-envelope"></i>
-                            <h4>Write to us at</h4>
-                            <p>joshuadevops@engineer.com</p>
+                            <h4>Write to me at</h4>
+                            <p>email@contactjoshua.live</p>
                         </div>
 
                         <div class="contact-info-item">
